third_party/llvm-project/clang/test/CodeGen/RISCV/rvb-intrinsics/riscv32-zbb-error.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py
// RUN: %clang_cc1 -triple riscv32 -target-feature +zbb -verify %s -o -

int orc_b_64(int a) {
  return __builtin_riscv_orc_b_64(a); // expected-error {{builtin requires at least one of the following extensions support to be enabled : 'RV64'}}
}
